--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/book_shop_dev?user=postgres&password=postgres
+//spring.datasource.url=jdbc:postgresql://localhost:5432/book_shop_dev?user=postgres&password=postgres
+spring.datasource.url=${DB_URL}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
